import java.text.SimpleDateFormat

buildscript {
	ext {
		arcHash = property("archash")

		arcDir = new File(rootDir, 'Arc').exists() ? new File(rootDir, 'Arc') : new File(rootDir.parent, 'Arc')
		localArc = arcDir.exists() && !project.hasProperty("noLocalArc")

		arcModule = { String name ->
			//skip to last submodule
			name = name.substring(name.lastIndexOf(':') + 1)
			return "com.github.Anuken.Arc:$name:$arcHash"
		}
	}

	repositories {
		mavenLocal()
		mavenCentral()
		google()
		maven { url = 'https://jitpack.io' }
	}

	dependencies {
		classpath arcModule(":extensions:packer")
		classpath arcModule(":arc-core")
	}
}


allprojects {
	apply plugin: 'maven-publish'

	version = project.hasProperty("packageVersion") ? project.getProperty("packageVersion") : 'release'
	group = 'com.github.ETJAKEOC'

	ext {
		versionNumber = '8'
		if (!project.hasProperty("versionModifier")) versionModifier = 'ETJAKEOC'
		if (!project.hasProperty("versionType")) versionType = 'official'
		appName = 'Mindustry'
		steamworksVersion = '7df98118ed7124f2804e18bb72662127317eb4ba'
		rhinoVersion = '32395f942976a6d1d21ec9877664554cd5762306'

		loadVersionProps = {
			return new Properties().with { p -> p.load(file('../core/assets/version.properties').newReader()); return p }
		}

		debugged = {
			return new File(projectDir.parent, '../Mindustry-Debug').exists() && !project.hasProperty("release") && project.hasProperty("args")
		}

		generateDeployName = { String platform ->
			if (platform == "windows") {
				platform += "64"
			}
			platform = platform.capitalize()

			if (platform.endsWith("64") || platform.endsWith("32")) {
				platform = "${platform.substring(0, platform.length() - 2)}-${platform.substring(platform.length() - 2)}bit"
			}

			return "[${platform}]${getModifierString()}[${getNeatVersionString()}]${appName}"
		}

		getVersionString = {
			String buildVersion = getBuildVersion()
			return "$versionNumber-$versionModifier-$buildVersion"
		}

		getNeatVersionString = {
			String buildVersion = getBuildVersion()
			return "v$buildVersion"
		}

		hasSprites = {
			def file = new File(rootDir, "core/build/last_pack_version")
			return new File(rootDir, "core/assets/sprites/sprites.aatls").exists() && file.exists() && file.text == versionNumber
		}

		getModifierString = {
			if (versionModifier != "release") return "[${versionModifier.toUpperCase()}]"
			return ""
		}

		getBuildVersion = {
			if (!project.hasProperty("buildversion")) return "custom build"
			return project.getProperties()["buildversion"]
		}

		getCommitHash = {
			return 'git rev-parse --verify --short HEAD'.execute().text.trim()
		}

		getPackage = {
			return project.ext.mainClassName.substring(0, project.ext.mainClassName.indexOf("desktop") - 1)
		}

		findSdkDir = {
			//null because IntelliJ doesn't get env variables
			def v = System.getenv("ANDROID_HOME")
			if (v != null) return v
			//rootDir is null here, amazing. brilliant.
			def file = new File(rootDir, "local.properties")
			def props = new Properties().with { p -> p.load(file.newReader()); return p }
			return props.get("sdk.dir")
		}

		generateLocales = {
			def output = 'en\n'
			def bundles = new File(project(':core').projectDir, 'assets/bundles/')
			bundles.list().sort().each { name ->
				if (name.startsWith("bundle_") && name.endsWith(".properties")) {
					def locale = name.substring("bundle_".length(), name.lastIndexOf('.'))
					output += locale + "\n"
				}
			}
			new File(project(':core').projectDir, 'assets/locales').text = output
			new File(project(':core').projectDir, 'assets/basepartnames').text = new File(project(':core').projectDir, 'assets/baseparts/').list().sort().findAll { f -> f.endsWith(".msch") }.join("\n")
		}

		writeVersion = {
			def pfile = new File(project(':core').projectDir, 'assets/version.properties')
			def props = new Properties()

			try {
				pfile.createNewFile()
			} catch (Exception ignored) {
			}

			if (pfile.exists()) {
				props.load(new FileInputStream(pfile))

				String buildid = getBuildVersion()
				println("Compiling with build: '$buildid'")

				props["type"] = versionType
				props["number"] = versionNumber
				props["modifier"] = versionModifier
				props["build"] = buildid
				props["buildDate"] = new SimpleDateFormat("MMMM d, yyyy HH:mm a", Locale.getDefault()).format(new Date())
				props["commitHash"] = "unknown"
				if (project.hasProperty("showCommitHash")) {
					props["commitHash"] = getCommitHash()
				}

				props.store(pfile.newWriter(), "Autogenerated file. Do not modify.")
			}
		}

		writeProcessors = {
			new File(rootDir, "annotations/src/main/resources/META-INF/services/").mkdirs()
			def processorFile = new File(rootDir, "annotations/src/main/resources/META-INF/services/javax.annotation.processing.Processor")
			def text = new StringBuilder()
			def files = new File(rootDir, "annotations/src/main/java")
			files.eachFileRecurse(groovy.io.FileType.FILES) { file ->
				if (file.name.endsWith(".java") && (file.text.contains(" extends BaseProcessor") || (file.text.contains(" extends AbstractProcessor") && !file.text.contains("abstract class")))) {
					text.append(file.path.substring(files.path.length() + 1)).append("\n")
				}
			}

			processorFile.text = text.toString().replace(".java", "").replace("/", ".").replace("\\", ".")
		}

		writePlugins = {
			new File(rootDir, "annotations/src/main/resources/META-INF/services/").mkdirs()
			def processorFile = new File(rootDir, "annotations/src/main/resources/META-INF/services/com.sun.source.util.Plugin")
			def text = new StringBuilder()
			def files = new File(rootDir, "annotations/src/main/java")
			files.eachFileRecurse(groovy.io.FileType.FILES) { file ->
				if (file.name.endsWith(".java") && (file.text.contains(" implements Plugin"))) {
					text.append(file.path.substring(files.path.length() + 1)).append("\n")
				}
			}

			processorFile.text = text.toString().replace(".java", "").replace("/", ".").replace("\\", ".")
		}
	}

	repositories {
		mavenLocal()
		mavenCentral()
		maven { url = "https://central.sonatype.com/repository/maven-snapshots" }
		maven { url = 'https://jitpack.io' }
	}

	tasks.register('clearCache', Delete) {
		delete "$rootDir/core/assets/cache"
	}

	tasks.withType(JavaCompile) {
		targetCompatibility = JavaVersion.VERSION_25
		sourceCompatibility = JavaVersion.VERSION_25
		options.encoding = "UTF-8"
		options.compilerArgs += ["-Xlint:deprecation", "-Xlint:unchecked"]
		dependsOn clearCache

		options.forkOptions.memoryMaximumSize = "2048m"
		options.forkOptions.jvmArgs += [
				'--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
				'--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
				'--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
				'--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
				'--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
				'--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
				'--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
				'--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED'
		]
	}
}

configure(project(":annotations")) {
	tasks.withType(JavaCompile) {
		targetCompatibility = JavaVersion.VERSION_25
		sourceCompatibility = JavaVersion.VERSION_25
		options.fork = true

		options.compilerArgs.addAll([
				"--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
				"--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
				"--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
				"--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
				"--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
				"--add-exports", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
				"--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
				"--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
				"--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
				"--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
				"--add-exports", "jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
				"--add-exports", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
				"--add-exports", "java.base/sun.reflect.annotation=ALL-UNNAMED"
		])
	}
}

//compile with java compatibility for everything except the annotation project
configure(subprojects - project(":annotations") - project(":tests")) {
	tasks.withType(JavaCompile) {
		options.compilerArgs.addAll(['--release', '25'])
	}

	tasks.withType(Javadoc) {
		options {
			addStringOption('Xdoclint:none', '-quiet')
			addStringOption('-release', '25')
			encoding('UTF-8')
		}
	}
}

project(":desktop") {
	apply plugin: "java"

	compileJava.options.fork = true

	dependencies {
		implementation project(":core")
		implementation arcModule("extensions:profiling")
		implementation arcModule("extensions:discord")
		implementation arcModule("natives:natives-filedialogs")
		implementation arcModule("extensions:filedialogs")
		implementation arcModule("natives:natives-desktop")
		implementation arcModule("natives:natives-freetype-desktop")

		if (debugged()) implementation project(":debug")

		implementation "com.github.Anuken:steamworks4j:$steamworksVersion"

		implementation arcModule("backends:backend-sdl")
	}
}

project(":core") {
	apply plugin: "java-library"

	compileJava.options.fork = true
	compileJava.options.forkOptions.memoryMaximumSize = '4g'

	tasks.register("preGen") {
		outputs.upToDateWhen { false }
		generateLocales()
		writeVersion()
		writeProcessors()
		writePlugins()
	}

	tasks.register("copyChangelog") {
		doLast {
			def props = loadVersionProps()
			def androidVersion = props['androidBuildCode'].toInteger() - 2
			def loglines = file("../changelog").text.split("\n")
			def notice = "[This is a truncated changelog, see Github for full notes]"
			def maxLength = 460

			def androidLogList = [notice] + loglines.findAll { line -> !line.endsWith("]") || line.endsWith("[Mobile]") || line.endsWith("[Android]") }
			def result = ""
			androidLogList.forEach { line ->
				if (result.length() + line.length() + 1 < maxLength) {
					result += line + "\n"
				}
			}
			def changelogs = file("../fastlane/metadata/android/en-US/changelogs/")
			changelogs.mkdirs()
			try {
				new File(changelogs, androidVersion + ".txt").text = (result)
			} catch (Exception ignored) {
			}
		}
	}

	tasks.register("depsJar", Jar) {
		dependsOn classes, ":server:dist"
		archiveClassifier = 'deps'
		from files(sourceSets.main.output.classesDirs)
		from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
		from zipTree("../server/build/libs/server-release.jar")
		from files("src/")
		from files(new File(arcDir, "natives/natives-desktop/libs"))
		from files(new File(arcDir, "arc-core/src/"))
		from files(new File(arcDir, "extensions/arcnet/src/"))
		from files(new File(arcDir, "extensions/g3d/src/"))
		from files(new File(arcDir, "extensions/flabel/src/"))
		from files(new File(arcDir, "extensions/freetype/src/"))
		from files("../server/src/")

		exclude("META-INF/**")
		exclude("vfxshaders/**")
		exclude("maps/**")
		exclude("baseparts/**")
		exclude("vfxshaders/**")
		duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	}

	tasks.register("sourcesJar", Jar) {
		dependsOn classes
		archiveClassifier = 'sources'
		from sourceSets.main.allSource
	}

	tasks.register("assetsJar", Jar) {
		dependsOn ":tools:pack"
		archiveClassifier = 'assets'

		into('assets') {
			from 'assets'
			exclude 'config', 'cache', 'music', 'sounds', 'sprites/fallback'
		}

		into('assets-raw/sprites') {
			from 'assets-raw/sprites_out'
			include '**/*.png'
		}
	}

	tasks.register("musicJar", Jar) {
		archiveClassifier = 'music'

		into('assets') {
			from 'assets'
			include '**/*.ogg', '**/*.mp3'
		}
	}

	dependencies {
		compileJava.dependsOn(preGen)

		api libs.lz4.java
		api arcModule("arc-core")
		api arcModule("extensions:flabel")
		api arcModule("extensions:freetype")
		api arcModule("extensions:g3d")
		api arcModule("extensions:fx")
		api arcModule("extensions:arcnet")
		api "com.github.Anuken:rhino:$rhinoVersion"
		api "org.jetbrains.kotlin:kotlin-stdlib:2.1.10"
		api "org.jetbrains.kotlin:kotlin-reflect:2.1.10"
		api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.1"
		if (localArc && debugged()) api arcModule("extensions:recorder")
		if (localArc) api arcModule(":extensions:packer")

		compileOnly project(":annotations")
		annotationProcessor project(":annotations")
	}

	afterEvaluate {
		tasks.register("mergedJavadoc", Javadoc) {
			def blacklist = [project(":ios"), project(":desktop"), project(":server"), project(":annotations")]
			if (findProject(":android") != null) {
				blacklist += project(":android")
			}

			source rootProject.subprojects.collect { project ->
				if (!blacklist.contains(project) && project.hasProperty("sourceSets")) {
					return project.sourceSets.main.allJava
				}
			}

			classpath = files(rootProject.subprojects.collect { project ->
				if (!blacklist.contains(project) && project.hasProperty("sourceSets")) {
					return project.sourceSets.main.compileClasspath
				}
			})
			destinationDir = layout.buildDirectory.dir('javadoc').get().asFile
		}
	}


	//comp** classes are only used for code generation
	jar {
		exclude("mindustry/entities/comp/**")
	}
}

project(":server") {
	apply plugin: "java"

	dependencies {
		implementation project(":core")
		implementation arcModule("backends:backend-headless")
		implementation libs.jline
	}
}

project(":tests") {
	apply plugin: "java"

	dependencies {
		testImplementation project(":core")
		testImplementation libs.junit.jupiter.params
		testImplementation libs.junit.jupiter.api
		testImplementation arcModule("backends:backend-headless")
		testImplementation libs.json
		testRuntimeOnly libs.junit.jupiter.engine
		testRuntimeOnly libs.junit.platform.launcher
	}

	tasks.withType(JavaCompile) {
		targetCompatibility = JavaVersion.VERSION_25
		sourceCompatibility = JavaVersion.VERSION_25
		options.compilerArgs.addAll(['--release', '25'])
	}

	test {
		//fork every test so mods don't interact with each other
		forkEvery = 1
		jvmArgs = ["-XX:+HeapDumpOnOutOfMemoryError"]
		useJUnitPlatform()
		workingDir = new File("../core/assets")
		testLogging {
			exceptionFormat = 'full'
			showStandardStreams = true
		}
	}
}

project(":tools") {
	apply plugin: "java"

	dependencies {
		implementation project(":core")

		implementation arcModule("natives:natives-desktop")
		implementation arcModule("natives:natives-freetype-desktop")
		implementation arcModule("backends:backend-headless")

		implementation libs.guava
		implementation libs.javaparser.core
	}
}

project(":annotations") {
	apply plugin: "java-library"

	dependencies {
		implementation libs.javapoet
		implementation arcModule("arc-core")
	}
}

configure([":core", ":server"].collect { project(it) }) {
	java {
		withJavadocJar()
		withSourcesJar()
	}

	publishing {
		publications {
			maven(MavenPublication) {
				from components.java
			}
		}
	}
}

tasks.register("cleanDeployOutput") {
	doFirst {
		if (getBuildVersion() == "custom build" || getBuildVersion() == "") throw new IllegalArgumentException("----\n\nSET A BUILD NUMBER FIRST!\n\n----")
		if (!project.hasProperty("release")) throw new IllegalArgumentException("----\n\nSET THE RELEASE PROJECT PROPERTY FIRST!\n\n----")

		delete {
			delete "deploy/"
		}
	}
}

tasks.register("deployAll") {
	dependsOn tasks.named("cleanDeployOutput")
	dependsOn "desktop:packrLinux64"
	dependsOn "desktop:packrWindows64"
	dependsOn "desktop:packrMacOS"
	if (versionModifier != "steam") {
		dependsOn "server:deploy"
		dependsOn "android:deploy"
	}
}

tasks.register("resolveDependencies") {
	doLast {
		rootProject.allprojects { project ->
			Set<Configuration> configurations = project.buildscript.configurations + project.configurations
			configurations.findAll { c -> c.canBeResolved }.forEach { c -> c.resolve() }
		}
	}
}

if (System.getProperty("compileMethodParams") != null) {
	project(":core").tasks.withType(JavaCompile).configureEach {
		options.compilerArgs << '-parameters'
	}
}